Signatures cleanup: - null testing and List treatment moved from impl constructors to factory methods - corrected Javadoc - re-organized arguments in MethodSignature and used varargs where relevant - removed obsolete overrides from MethodSignature - avoided list copying in SignaturesImpl - fixed SignatureTest